# cuImageProcessor-examples

./: .gitignore  CMakeLists.txt  README.md
include/cuImageProcessor/: bitmap.cuh  crop.cuh  flip.cuh  grayscale.cuh  grayscale.h  resize.cuh  resize.h  rotate.cuh
src/: main.cpp
